--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     box-sizing: border-box;
    }
    body{
+     height: 100vh;
     display: flex;
-    justify-self: center;
+    align-items: center;
+    justify-content: center;
     background-color: #f4d03f ;
    }
 
@@ -31,7 +33,6 @@
     width: 400px;
     height: fit-content;
     gap: 20px;
-    margin-top: 150px ;
     padding: 20px;
     box-shadow: 4px 4px 0px 4px rgba(0, 0, 0, 1);
     
